# finances-manager

./: .gitignore  CMakeLists.txt  LICENSE  VERSIONS  backup.sh  backup_db.sh  restore.sh  schema.sql
doc/: ideas.org
src/: CMakeLists.txt  main.cpp  version.h
src/data/: DateFactory.cpp  DateFactory.h  DateFilter.h  DateRangeFilter.cpp  DateRangeFilter.h  DateToStringFactory.cpp  DateToStringFactory.h  DbHandler.cpp  DbHandler.h  RangeConverter.cpp  RangeConverter.h  RecipientObject.cpp  RecipientObject.h  RecipientObjectStore.cpp  RecipientObjectStore.h  RecurrentItemNameFactory.cpp  RecurrentItemNameFactory.h  RecurrentItemTemplate.cpp  RecurrentItemTemplate.h  ResourceHandler.cpp  ResourceHandler.h  SettingsManager.cpp  SettingsManager.h
src/plotting/: Filters.cpp  Filters.h  RawItem.h  aggregation.cpp  aggregation.h
src/tests/: CMakeLists.txt  README.md  helpers.cpp  helpers.h  test_datefactory.cpp  test_daterangefilter.cpp  test_datetostringfactory.cpp  test_filters.cpp  test_rangeconverter.cpp  tests.cpp
src/ui/: AddCategoryDialog.h  AddItemDialog.cpp  AddItemDialog.h  AddRecipientDialog.cpp  ExpenditureView.cpp  ExpenditureView.h  MainWindow.cpp  MainWindow.h  PlotArea.cpp  PlotArea.h  PlotTab.cpp  PlotTab.h  TableTab.cpp  TableTab.h  main_window.cpp  main_window.h
src/ui/charts/: BarGraph.cpp  BarGraph.h  ChartArea.cpp  ChartArea.h  ChartAreaFactory.h  GraphArea.cpp  GraphArea.h
src/ui/common/: DateFilterPane.cpp  DateFilterPane.h  SelectOrAddRecipientButton.cpp  SelectOrAddRecipientButton.h
src/ui/delegates/: PriceColumnDelegate.cpp  RecipientAddressDelegate.cpp  RecipientAddressDelegate.h  RecipientNameDelegate.cpp  RecipientNameDelegate.h
src/ui/dialogs/: AddCategoryDialog.cpp  AddCategoryDialog.h  AddItemDialog.cpp  AddItemDialog.h  AddRecipientDialog.cpp  AddRecipientDialog.h  ItemTemplateTableModel.cpp  ItemTemplateTableModel.h  SearchRecipientDialog.cpp  SearchRecipientDialog.h  SelectRecurrentItemTemplateDialog.cpp  SelectRecurrentItemTemplateDialog.h  SettingsDialog.cpp  SettingsDialog.h
src/ui/dialogs/additem/: AddItemBlock.cpp  AddItemBlock.h  AddItemRow.cpp  AddItemRow.h
src/ui/menubar/: MenuBar.cpp  MenuBar.h
src/ui/plotting/: PlotArea.cpp  PlotArea.h  PlotBottomBar.cpp  PlotBottomBar.h  PlotCategoryFilter.cpp  PlotCategoryFilter.h  PlotGrid.cpp  PlotGrid.h  PlotLeftAxis.cpp  PlotLeftAxis.h  PlotLine.cpp  PlotLine.h  PlotPoint.cpp  PlotPoint.h  Plottable.h
src/ui/plotting/graphics/: CumulativePlotLine.cpp  CumulativePlotLine.h  DailyChangesPlotLine.cpp  DailyChangesPlotLine.h  PlotBar.cpp  PlotBar.h  PlotElement.h  PlotLine.cpp  PlotLine.h  PlotLineFactory.cpp  PlotLineFactory.h  PlotPoint.cpp  PlotPoint.h  Plottable.h
src/ui/table/: ExpenditureView.cpp  ExpenditureView.h  PriceColumnDelegate.h
src/ui/tabs/: ChartTab.cpp  ChartTab.h  PlotTab.cpp  PlotTab.h  QtChartTab.cpp  QtChartTab.h  TableTab.cpp  TableTab.h
